Declare the system tests in the new evaluation language.
Refs #113677